--- a/Advanced Calculus 2/AC 2 note.tex
+++ b/Advanced Calculus 2/AC 2 note.tex
@@ -2456,7 +2456,8 @@ d_n \text{ converge }\implies \limsup_{n\to\infty} c_nd_n=\lim_{n\to \infty}d_n\
 
 \end{mdframed}
 \begin{theorem}
-\textbf{(Merten's Theorem)} Suppose 
+\label{Merten Cau}
+\textbf{(Merten's Theorem for Cauchy Product)} Suppose 
 \begin{enumerate}[label=(\alph*)]
   \item $\sum_{n=0}^\infty a_n$ converge absolutely 
   \item $\sum_{n=0}^\infty a_n=A$
@@ -2485,9 +2486,10 @@ In this section, by a  \textbf{real power series}, we mean a pair $(a,c_n)$ wher
 \end{cases}
 \end{align*}
 Such $R$ always exist (and is unique, this fact can be checked without computing the actual value of $R$) and is exactly 
-\begin{align*}
+\begin{align}
+\label{Cauchy-Hadamard}
 R=\frac{1}{\limsup_{n\to\infty} \sqrt[n]{c_n} }
-\end{align*}
+\end{align}
 This result is called \textbf{Cauchy-Hadamard Theorem}. It can be directly proved by applying Root Test to $\sum c_n(z-a)^n$. For this, we say $(a-R,a+R)$ is the \textbf{interval of convergence}. Note that Cauchy-Hadamard Theorem does not tell us whether a power series converges at points of boundary of disk of convergence. It require extra works to determine if the power series converge at endpoints. Following is an example of such discussion.   
 \begin{Example}{\textbf{(Discussion of Convergence on Boundary)}}{}
 \begin{align*}
@@ -2521,14 +2523,15 @@ We now investigate deeper into real analytic functions. We first prove that real
 \end{mdframed}
 \begin{theorem}
 \label{AfaS}
-\textbf{(Analytic functions are Smooth)} Given a power series $(a,c_n)$ of convergence radius $R$, if we define $f:D_R(a)\rightarrow \C$ by 
+\textbf{(Analytic functions are Smooth)} Given a power series $(a,c_n)$ of convergence radius $R$, if we define $f:D_R(a)\rightarrow \C$ by
 \begin{align*}
-f(z)=\sum_{n=0}^\infty c_n (z-a)^n 
+f(z)=\sum _{n=0}^{\infty}c_n(z-a)^n 
 \end{align*}
 Then 
-\begin{align*}
-f\text{ is of class }C^\infty\text{ on $D_{R}(a)$ and $f^{(k)}(z)=\sum_{n=k}^\infty \frac{n!}{(n-k)!}c_n(z-a)^{n-k}$  on $D_R(a)$}
-\end{align*}
+\begin{enumerate}[label=(\alph*)]
+  \item $f$ is of class $C^{\infty}$ on $D_R(a)$ 
+  \item $f^{(k)}(z)=\sum_{n=k}^{\infty}\frac{n!}{(n-k)!}c_n(z-a)^{n-k}$
+\end{enumerate}
 \end{theorem}
 \begin{proof}
 We prove by induction. Base case $k=0$ is trivial. Fix $k\geq 0$. Suppose we have 
@@ -2666,185 +2669,9 @@ This now implies
 
 \end{proof}
 \chapter{Calculus in Euclidean Space}
-\section{Linear Algebra Review*}
-\textbf{(Axiom Parts)}
-\begin{mdframed}
-Recall that by a \textbf{normed space} $V$, we mean a vector space over a sub-field $\F$ of $\C$ equipped with  $\norm{\cdot}:V\to \R_0^+$ satisfying the following $\underline{\text{axioms}}$: 
-\begin{enumerate}[label=(\alph*)]
-  \item $\norm{x}=0 \implies x=0$ (positive-definiteness)
-  \item $\norm{sx}=\abso{s}\cdot \norm{x}$ for all $s \in \F$ and $x\in V$ (absolute-homogenity)
-  \item $\norm{x+y}\leq \norm{x}+\norm{y}$ for all $x,y \in V$ (triangle inequality)
-\end{enumerate}
-Observe
-\begin{align*}
-\norm{0}=\norm{0+x}\leq \norm{0}+\norm{x}\text{ for all $x\in V$ }
-\end{align*}
-This shows that $\norm{x}\geq 0$ for all $x\in V$. Also observe 
-\begin{align*}
-\norm{0}=\norm{0(x)}=\abso{0}\cdot \norm{x}=0
-\end{align*}
+\section{Operator Norm}
 
-We can now rewrite the normed space axioms into
-\begin{enumerate}[label=(\alph*)]
-  \item $\norm{x}=0\iff x=0$ (positive-definiteness)
-  \item $\norm{sx}=\abso{s}\cdot \norm{x}$ for all $s \in \F$ and $x\in V$ (absolute-homogeneity)
-  \item $\norm{x+y}\leq \norm{x}+\norm{y}$ for all $x,y \in V$ (triangle inequality)
-  \item $\norm{x}\geq 0$ for all $x \in V$ (non-negativity)
-\end{enumerate}
-\end{mdframed}
-\begin{mdframed}
-Recall that by an \textbf{inner product space} $V$, we mean a vector space over  $\R$ of  $\C$ equipped with  $\langle \cdot,\cdot\rangle : V^2 \rightarrow \R\text{ or }\C$  satisfying the following $\underline{\text{axioms}}$
-\begin{enumerate}[label=(\alph*)]
-  \item $\langle x,x\rangle >0$ for all $x\neq 0$ (Positive-definiteness)
-  \item $\langle x,y\rangle =\overline{\langle y,x\rangle }$ (Conjugate symmetry)
-  \item $\langle x+y,z\rangle =\langle x,z\rangle +\langle y,z\rangle $ and $\langle cx,z\rangle=c\langle x,z\rangle $ (Linearity in the first argument)
-\end{enumerate}
-Note that conjugate symmetry let us deduce
-\begin{align*}
-\langle x,x\rangle =\overline{\langle x,x\rangle }\implies \langle x,x\rangle \inr
-\end{align*}
-Also, one can easily use linearity in first argument to deduce 
-\begin{align*}
-\langle 0,0\rangle =2\langle 0,0\rangle \implies \langle 0,0\rangle =0
-\end{align*}
-This now let us rewrite the inner product space over $\C$ axioms into 
-\begin{enumerate}[label=(\alph*)]
-  \item $\langle x,x\rangle \geq 0$ for all $x\in V$ (non-negativity) 
-  \item $\langle x,x\rangle =0 \iff x=0$ (positive-definiteness)
-  \item $\langle x,y\rangle =\overline{\langle y,x\rangle }$ (conjugate symmetry)
-  \item $\langle cx+y,z\rangle =c\langle x,z\rangle +\langle y,z\rangle $ and $\langle x,cy+z\rangle =\overline{c}\langle x,y\rangle +\langle x,z\rangle $ (Linearity)
-\end{enumerate}
-Note that using $c=1$ and $y=0$, ($\because \langle 0,z\rangle =0\langle x,z\rangle=0 $) one can check that the latter expression of linearity implies the first expression.
-\end{mdframed}
-\begin{mdframed}
-If the scalar field is $\R$, then conjugate symmetry is just symmetry and we also have linearity in the second argument.\\
-
-This now let us rewrite the inner product space over $\R$ axioms into 
-\begin{enumerate}[label=(\alph*)]
-  \item $\langle x,x\rangle \geq 0$ for all $x\in V$ (non-negativity) 
-  \item $\langle x,x\rangle =0 \iff x=0$ (positive-definiteness)
-  \item $\langle x,y\rangle =\langle y,x\rangle $ (symmetry)
-  \item Linearity in both arguments
-\end{enumerate}
-\end{mdframed}
-\begin{mdframed}
-If we do not require $\langle \cdot,\cdot\rangle $ to be positive-definite, but only non-negative, i.e. $\langle x,x\rangle \geq 0$ for all $x\in V$, then we have a \textbf{positive semi-definite Hermitian form}. Formally speaking, a positive semi-definite Hermitian form $\langle\cdot,\cdot \rangle :V^2 \rightarrow \R\text{ or }\C$ satisfy the following axioms
-\begin{enumerate}[label=(\alph*)]
-  \item $\langle x,x\rangle \geq 0$ for all $x\in V$ (non-negativity)
-  \item $\langle x,y\rangle =\overline{\langle y,x\rangle }$ (conjugate symmetry)
-  \item $\langle x+y,z\rangle =\langle x,z\rangle +\langle y,z\rangle $ and $\langle cx,z\rangle=c\langle x,z\rangle $ (Linearity in the first argument)
-\end{enumerate}
-\begin{Example}{\textbf{(Example of Positive semi-definite Hermitian form)}}{}
-\begin{align*}
-\text{ arbitrary }V\text{ over $\R$ or  $\C$ }\hspace{0.5cm}\langle x,y\rangle \triangleq 0\text{ for all $x,y$ }\hspace{1cm}
-\end{align*}
-\end{Example}
-\end{mdframed}
-\textbf{(Norm Induce Part)}
-\begin{mdframed}
-Given a vector space $V$ over $\R$ or  $\C$, one can check that if  $V$ is equipped with an inner product  $\langle \cdot,\cdot\rangle :V^2\rightarrow \R\text{ or }\C$, then we can induce a norm on $V$ by 
-\begin{align*}
-\hspace{3cm}\norm{x}=\sqrt{\langle x,x\rangle }\hspace{1.5cm}(x \in V)
-\end{align*}
-Note that 
-\begin{align*}
-\norm{x}=0\iff \langle x,x\rangle =0 
-\end{align*}
-This implies that if $\langle \cdot,\cdot\rangle $ is an inner product (satisfy positive-definiteness), then $\norm{\cdot}$ is also positive-definite. And if $\langle \cdot,\cdot\rangle $ is not positive-definite, then there exists  $x\neq 0\in V$ such that $\norm{x}=0$, which make $\norm{\cdot}$ a \textbf{semi-norm}.\\
-
-Absolute homogeneity follows from the linearity of inner product.\\
-
-To check triangle inequality, we first have to prove Cauchy-Schwarz inequality.
-\end{mdframed}
-\begin{theorem}
-\textbf{(Pythagorean Theorem)} Given a positive semi-definite Hermitian form $\langle \cdot,\cdot\rangle : V^2 \rightarrow \C $ on some vector space $V$ over $\C$, we have 
- \begin{align*}
-\langle x,y\rangle =0 \implies \norm{x+y}^2=\norm{x}^2+\norm{y}^2
-\end{align*}
-\end{theorem}
-\begin{proof}
-Compute 
-\begin{align*}
-\norm{x+y}^2&=\langle x+y,x+y\rangle\\
-&=\langle x,x+y\rangle +\langle y,x+y\rangle \\
-&=\overline{\langle x+y,x\rangle }+\overline{\langle x+y,y\rangle }\\
-&=\langle x,x\rangle + \overline{\langle y,x\rangle }+ \overline{\langle x,y\rangle }+\langle y,y\rangle \\
-&=\langle x,x\rangle +\langle y,y\rangle = \norm{x}^2 +\norm{y}^2
-\end{align*}
-\end{proof}
-\begin{theorem}
-\textbf{(Cauchy-Schwarz Inequality)} Given a positive semi-definite Hermitian form $\langle \cdot,\cdot\rangle :V^2\rightarrow \C$ on vector space $V$ over $\C$, we have 
-\begin{enumerate}[label=(\alph*)]
-  \item $\abso{\langle x,y\rangle}\leq  \norm{x}\cdot\norm{y}\hspace{0.5cm}(x,y \in V)$ 
-  \item the equality hold true if $x,y$ are linearly dependent
-  \item if $\langle \cdot,\cdot\rangle $ is an inner product (being positive-definite), then the equality hold true if and only if $x,y$ are linearly independent.
-\end{enumerate}
-\end{theorem}
-\begin{proof}
-We first prove 
-\begin{align*}
-  \vi{\abso{\langle x,y\rangle }\leq \norm{x}\cdot\norm{y}}
-\end{align*}
-We reduce the problem into proving 
-\begin{align*}
-\vi{\frac{\abso{\langle x,y\rangle }^2}{\norm{x}^2}\leq\norm{y}^2  }
-\end{align*}
-Set $z\triangleq y-\frac{\langle y,x\rangle }{\norm{x}^2}x$. We then have 
-\begin{align*}
-\langle z,x\rangle =\langle y-\frac{\langle y,x\rangle }{\norm{x}^2}x,x \rangle =\langle y,x\rangle - \frac{\langle y,x\rangle }{\norm{x}^2}\langle x,x\rangle =0
-\end{align*}
-Then from $y=z+\frac{\langle y,x\rangle }{\norm{x}^2}x$, we can now deduce
-\begin{align*}
-\langle y,y\rangle &= \langle z+\frac{\langle y,x\rangle }{\norm{x}^2}x,z+ \frac{\langle y,x\rangle }{\norm{x}^2}x\rangle  \\
-&=\langle z,z\rangle + \abso{\frac{\langle y,x\rangle }{\langle x,x\rangle }}^2 \langle x,x\rangle \\
-&=\langle z,z\rangle + \frac{\abso{\langle x,y\rangle }^2}{\langle x,x\rangle }
-\end{align*}
-Because $\langle z,z\rangle\geq 0 $, we now have
-\begin{align*}
-\langle y,y\rangle = \langle z,z\rangle + \frac{\abso{\langle x,y\rangle }^2}{\langle x,x\rangle }\geq  \frac{\abso{\langle x,y\rangle }^2}{\langle x,x\rangle }\vdone
-\end{align*}
-The equality hold true if and only if $\langle z,z\rangle =0$. This explains the other two statements regarding the equality. 
-\end{proof}
-\begin{mdframed}
-The proof is clearly geometrical. If one wish to remember the proof, one should see the trick we use is exactly 
-\begin{align*}
-z\triangleq y-\abso{y}(\cos \theta )\hat{x}\text{ is the projection of $y$ onto $x^{\perp}$ }
-\end{align*}
-\begin{center}
-   \begin{minipage}{0.9\linewidth}  
-       \centering
-       \includegraphics[height=5cm,width=12cm]{CSp.jpeg}
-   \end{minipage}
-\end{center}
-Then all we do rest is just expanding $\abso{y}^2=\abso{z+\tilde{x}}^2$, where $\tilde{x}=y-z=\abso{y}(\cos \theta)\hat{x}$, which give the answer and is easy to compute since $z\cdot \tilde{x}=0$.\\
-
-Now, with Cauchy-Schwarz Inequality, we can check the triangle inequality 
-\begin{align*}
-  \norm{x+y}^2&=\langle x+y,x+y\rangle \\
-&=\langle x,x\rangle +\langle x,y\rangle +\langle y,x\rangle +\langle y,y\rangle \\
-&= \langle x,x\rangle + \langle y,y\rangle +2\text{ Re }\langle x,y\rangle \\
-&\leq \norm{x}^2 + \norm{y}^2 + 2\abso{\langle x,y\rangle }\\
-&\leq \norm{x}^2 + \norm{y}^2 + 2\norm{x}\cdot \norm{y}=\Big(\norm{x}+\norm{y}\Big)^2
-\end{align*}
-\end{mdframed}
-\textbf{(Euclidean Space Abstract Part)} 
-\begin{mdframed}
-  By a \textbf{concrete Euclidean Space}, we mean some space of $n$-tuple  $(x_1,\dots ,x_n)$ over $\R$, equipped with inner product  $\langle \cdot,\cdot\rangle_E$ defined by 
-\begin{align*}
-  \langle  (x_1,\dots,x_n)  ,(y_1,\dots ,y_n)\rangle_E= \sqrt{\sum_{k=1}^n (y_k-x_k)^2} 
-\end{align*}
-By an \textbf{Euclidean Space}, we simply mean a finite dimensional vector space $V$ over $\R$,  equipped with an inner product $\langle \cdot,\cdot\rangle $ such that there exists a concrete Euclidean space $E$ and an isomorphism  $\phi:V\to E$ such that 
-\begin{align*}
-\hspace{3cm}\langle x,y\rangle= \langle \phi (x),\phi (y)\rangle_E \hspace{1.5cm}(x,y \in V)
-\end{align*}
-Note that if you define $\langle \cdot,\cdot\rangle $ on the space of $n$-tuples $(x_1,\dots ,x_n)$ over $\R$ by 
-\begin{align*}
-  \langle  (x_1,\dots,x_n)  ,(y_1,\dots ,y_n)\rangle=2 \sqrt{\sum_{k=1}^n (y_k-x_k)^2} 
-\end{align*}
-Then, the space of $n$-tuple is clearly not a concrete Euclidean space, but a Euclidean space. 
-
-\end{mdframed}
-\section{Differentiability Theorem*}
+\section{Differentiability Theorem}
 \begin{mdframed}
 
 
@@ -3003,9 +2830,375 @@ f\text{ is a diffeomorphism from $U$ to  $V$}
 \end{align*}
 \end{theorem}
 \section{Implicit Function Theorem}
+\section{Linear Algebra Review}
+\begin{mdframed}
+This section give an 
+\begin{enumerate}[label=(\alph*)]
+  \item 
+\end{enumerate}
+\end{mdframed}
+\textbf{(Norm Axiom Part)}
+\begin{mdframed}
+Recall that by a \textbf{normed space} $V$, we mean a vector space over a sub-field $\F$ of $\C$ equipped with  $\norm{\cdot}:V\to \R_0^+$ satisfying the following $\underline{\text{axioms}}$: 
+\begin{enumerate}[label=(\alph*)]
+  \item $\norm{x}=0 \implies x=0$ (positive-definiteness)
+  \item $\norm{sx}=\abso{s}\cdot \norm{x}$ for all $s \in \F$ and $x\in V$ (absolute-homogenity)
+  \item $\norm{x+y}\leq \norm{x}+\norm{y}$ for all $x,y \in V$ (triangle inequality)
+\end{enumerate}
+Observe
+\begin{align*}
+\norm{0}=\norm{0+x}\leq \norm{0}+\norm{x}\text{ for all $x\in V$ }
+\end{align*}
+This shows that $\norm{x}\geq 0$ for all $x\in V$. Also observe 
+\begin{align*}
+\norm{0}=\norm{0(x)}=\abso{0}\cdot \norm{x}=0
+\end{align*}
+
+We can now rewrite the normed space axioms into
+\begin{enumerate}[label=(\alph*)]
+  \item $\norm{x}=0\iff x=0$ (positive-definiteness)
+  \item $\norm{sx}=\abso{s}\cdot \norm{x}$ for all $s \in \F$ and $x\in V$ (absolute-homogeneity)
+  \item $\norm{x+y}\leq \norm{x}+\norm{y}$ for all $x,y \in V$ (triangle inequality)
+  \item $\norm{x}\geq 0$ for all $x \in V$ (non-negativity)
+\end{enumerate}
+\end{mdframed}
+\textbf{(Inner Product Axiom Part)}
+\begin{mdframed}
+Recall that by an \textbf{inner product space} $V$, we mean a vector space over  $\R$ or $\C$ equipped with  $\langle \cdot,\cdot\rangle : V^2 \rightarrow \R\text{ or }\C$ satisfying the following $\underline{\text{axioms}}$
+\begin{enumerate}[label=(\alph*)]
+  \item $\langle x,x\rangle >0$ for all $x\neq 0$ (Positive-definiteness)
+  \item $\langle x,y\rangle =\overline{\langle y,x\rangle }$ (Conjugate symmetry)
+  \item $\langle x+y,z\rangle =\langle x,z\rangle +\langle y,z\rangle $ and $\langle cx,z\rangle=c\langle x,z\rangle $ (Linearity in the first argument)
+\end{enumerate}
+Note that conjugate symmetry let us deduce
+\begin{align*}
+\langle x,x\rangle =\overline{\langle x,x\rangle }\implies \langle x,x\rangle \inr
+\end{align*}
+Also, one can easily use linearity in first argument to deduce 
+\begin{align*}
+\langle 0,0\rangle =2\langle 0,0\rangle \implies \langle 0,0\rangle =0
+\end{align*}
+This now let us rewrite the inner product space over $\C$ axioms into 
+\begin{enumerate}[label=(\alph*)]
+  \item $\langle x,x\rangle \geq 0$ for all $x\in V$ (non-negativity) 
+  \item $\langle x,x\rangle =0 \iff x=0$ (positive-definiteness)
+  \item $\langle x,y\rangle =\overline{\langle y,x\rangle }$ (conjugate symmetry)
+  \item $\langle cx+y,z\rangle =c\langle x,z\rangle +\langle y,z\rangle $ and $\langle x,cy+z\rangle =\overline{c}\langle x,y\rangle +\langle x,z\rangle $ (Linearity)
+\end{enumerate}
+Note that using $c=1$ and $y=0$, ($\because \langle 0,z\rangle =0\langle x,z\rangle=0 $) one can check that the latter expression of linearity implies the first expression.
+\end{mdframed}
+\begin{mdframed}
+If the scalar field is $\R$, then conjugate symmetry is just symmetry and we also have linearity in the second argument.\\
+
+This now let us rewrite the inner product space over $\R$ axioms into 
+\begin{enumerate}[label=(\alph*)]
+  \item $\langle x,x\rangle \geq 0$ for all $x\in V$ (non-negativity) 
+  \item $\langle x,x\rangle =0 \iff x=0$ (positive-definiteness)
+  \item $\langle x,y\rangle =\langle y,x\rangle $ (symmetry)
+  \item Linearity in both arguments
+\end{enumerate}
+\end{mdframed}
+\begin{mdframed}
+If we do not require $\langle \cdot,\cdot\rangle $ to be positive-definite, but only non-negative, i.e. $\langle x,x\rangle \geq 0$ for all $x\in V$, then we have a \textbf{positive semi-definite Hermitian form}. Formally speaking, a positive semi-definite Hermitian form $\langle\cdot,\cdot \rangle :V^2 \rightarrow \R\text{ or }\C$ satisfy the following axioms
+\begin{enumerate}[label=(\alph*)]
+  \item $\langle x,x\rangle \geq 0$ for all $x\in V$ (non-negativity)
+  \item $\langle x,y\rangle =\overline{\langle y,x\rangle }$ (conjugate symmetry)
+  \item $\langle x+y,z\rangle =\langle x,z\rangle +\langle y,z\rangle $ and $\langle cx,z\rangle=c\langle x,z\rangle $ (Linearity in the first argument)
+\end{enumerate}
+\begin{Example}{\textbf{(Example of Positive semi-definite Hermitian form)}}{}
+\begin{align*}
+\text{ arbitrary }V\text{ over $\R$ or  $\C$ }\hspace{0.5cm}\langle x,y\rangle \triangleq 0\text{ for all $x,y$ }\hspace{1cm}
+\end{align*}
+\end{Example}
+\end{mdframed}
+\textbf{(Norm Induce Part)}
+\begin{mdframed}
+Given a vector space $V$ over $\R$ or  $\C$, one can check that if  $V$ is equipped with an inner product  $\langle \cdot,\cdot\rangle :V^2\rightarrow \R\text{ or }\C$, then we can induce a norm on $V$ by 
+\begin{align*}
+\hspace{3cm}\norm{x}\triangleq \sqrt{\langle x,x\rangle }\hspace{1.5cm}(x \in V)
+\end{align*}
+Note that 
+\begin{align*}
+\norm{x}=0\iff \langle x,x\rangle =0 
+\end{align*}
+This implies that if $\langle \cdot,\cdot\rangle $ is an inner product (satisfy positive-definiteness), then $\norm{\cdot}$ is also positive-definite. And if $\langle \cdot,\cdot\rangle $ is not positive-definite, then there exists  $x\neq 0\in V$ such that $\norm{x}=0$, which make $\norm{\cdot}$ a \textbf{semi-norm}.\\
+
+Absolute homogeneity follows from the linearity of inner product.\\
+
+To check triangle inequality, we first have to prove Cauchy-Schwarz inequality.
+\end{mdframed}
+\begin{theorem}
+\label{BPoP}
+\textbf{(Basic Property of Positive semi-definite Hermitian form)} Given a positive semi-definite Hermitian form $\langle \cdot,\cdot\rangle:V^2 \rightarrow \R\text{ or }\C $ and $x,y \in V$, we have 
+\begin{align*}
+\langle x,x\rangle =0 \implies \langle x,y\rangle =0
+\end{align*}
+\end{theorem}
+\begin{proof}
+\As{$\langle x,y\rangle\neq 0 $}. Fix $t> \frac{\norm{y}^2 }{2\abso{\langle x,y\rangle }^2}$. Compute 
+\begin{align*}
+\norm{y-t\langle y,x\rangle x}^2 &= \norm{y}^2 + \norm{(-t)\langle y,x\rangle x }^2  + \langle -t\langle y,x\rangle x,y \rangle + \langle y,-t\langle y,x\rangle x\rangle \\
+&=\norm{y}^2 + t^2 \abso{\langle x,y\rangle }^2 \norm{x}^2 -t \langle y,x\rangle \langle x,y\rangle - t \langle x,y\rangle \langle y,x\rangle  \\
+&= \norm{y}^2- 2t \abso{\langle x,y\rangle }^2 <0 \tCaC
+\end{align*}
+\end{proof}
+\begin{theorem}
+\textbf{(Cauchy-Schwarz Inequality)} Given a positive semi-definite Hermitian form $\langle \cdot,\cdot\rangle :V^2\rightarrow \C$ on vector space $V$ over $\C$, we have 
+\begin{enumerate}[label=(\alph*)]
+  \item $\abso{\langle x,y\rangle}\leq  \norm{x}\cdot\norm{y}\hspace{0.5cm}(x,y \in V)$ 
+  \item the equality hold true if $x,y$ are linearly dependent
+  \item the equality hold true if and only if $x,y$ are linearly dependent (provided $\langle \cdot,\cdot\rangle $ is an inner product)
+\end{enumerate}
+\end{theorem}
+\begin{proof}
+We first prove 
+\begin{align*}
+  \vi{\hspace{3cm}\abso{\langle x,y\rangle }\leq \norm{x}\cdot\norm{y}\hspace{1.5cm}(x,y \in V)}
+\end{align*}
+Fix $x,y \in V$. \myref{Theorem}{BPoP} tell us $\norm{x}=0 \implies  \langle x,y\rangle =0$. Then we can reduce the problem into proving 
+\begin{align*}
+\vi{\frac{\abso{\langle x,y\rangle }^2}{\norm{x}^2}\leq\norm{y}^2  }
+\end{align*}
+Set $z\triangleq y-\frac{\langle y,x\rangle }{\norm{x}^2}x$. We then have 
+\begin{align*}
+\langle z,x\rangle =\langle y-\frac{\langle y,x\rangle }{\norm{x}^2}x,x \rangle =\langle y,x\rangle - \frac{\langle y,x\rangle }{\norm{x}^2}\langle x,x\rangle =0
+\end{align*}
+Then from $y=z+\frac{\langle y,x\rangle }{\norm{x}^2}x$, we can now deduce
+\begin{align*}
+\langle y,y\rangle &= \langle z+\frac{\langle y,x\rangle }{\norm{x}^2}x,z+ \frac{\langle y,x\rangle }{\norm{x}^2}x\rangle  \\
+&=\langle z,z\rangle + \abso{\frac{\langle y,x\rangle }{\langle x,x\rangle }}^2 \langle x,x\rangle \\
+&=\langle z,z\rangle + \frac{\abso{\langle x,y\rangle }^2}{\langle x,x\rangle }
+\end{align*}
+Because $\langle z,z\rangle\geq 0 $, we now have
+\begin{align*}
+\langle y,y\rangle = \langle z,z\rangle + \frac{\abso{\langle x,y\rangle }^2}{\langle x,x\rangle }\geq  \frac{\abso{\langle x,y\rangle }^2}{\langle x,x\rangle }\vdone
+\end{align*}
+The equality hold true if and only if $\langle z,z\rangle =0$. This explains the other two statements regarding the equality. 
+\end{proof}
+\begin{mdframed}
+The proof is clearly geometrical. If one wish to remember the proof, one should see the trick we use is exactly 
+\begin{align*}
+z\triangleq y-\abso{y}(\cos \theta )\hat{x}\text{ is the projection of $y$ onto $x^{\perp}$ }
+\end{align*}
+\begin{center}
+   \begin{minipage}{0.9\linewidth}  
+       \centering
+       \includegraphics[height=5cm,width=12cm]{CSp.jpeg}
+   \end{minipage}
+\end{center}
+Then all we do rest is just expanding $\abso{y}^2=\abso{z+\tilde{x}}^2$, where $\tilde{x}=y-z=\abso{y}(\cos \theta)\hat{x}$, which give the answer and is easy to compute since $z\cdot \tilde{x}=0$.\\
+
+Now, with Cauchy-Schwarz Inequality, we can check the triangle inequality 
+\begin{align*}
+  \norm{x+y}^2&=\langle x+y,x+y\rangle \\
+&=\langle x,x\rangle +\langle x,y\rangle +\langle y,x\rangle +\langle y,y\rangle \\
+&= \langle x,x\rangle + \langle y,y\rangle +2\text{ Re }\langle x,y\rangle \\
+&\leq \norm{x}^2 + \norm{y}^2 + 2\abso{\langle x,y\rangle }\\
+&\leq \norm{x}^2 + \norm{y}^2 + 2\norm{x}\cdot \norm{y}=\Big(\norm{x}+\norm{y}\Big)^2
+\end{align*}
+\end{mdframed}
+\textbf{(Euclidean Space Abstract Part)} 
+\begin{mdframed}
+  By a \textbf{concrete Euclidean Space}, we mean some space of $n$-tuple  $(x_1,\dots ,x_n)$ over $\R$, equipped with inner product  $\langle \cdot,\cdot\rangle_E$ defined by 
+\begin{align*}
+  \langle  (x_1,\dots,x_n)  ,(y_1,\dots ,y_n)\rangle_E= \sqrt{\sum_{k=1}^n (y_k-x_k)^2} 
+\end{align*}
+By an \textbf{Euclidean Space}, we simply mean a finite dimensional vector space $V$ over $\R$,  equipped with an inner product $\langle \cdot,\cdot\rangle $ such that there exists a concrete Euclidean space $E$ and an isomorphism  $\phi:V\to E$ such that 
+\begin{align*}
+\hspace{3cm}\langle x,y\rangle= \langle \phi (x),\phi (y)\rangle_E \hspace{1.5cm}(x,y \in V)
+\end{align*}
+Note that if you define $\langle \cdot,\cdot\rangle $ on the space of $n$-tuples $(x_1,\dots ,x_n)$ over $\R$ by 
+\begin{align*}
+  \langle  (x_1,\dots,x_n)  ,(y_1,\dots ,y_n)\rangle=2 \sqrt{\sum_{k=1}^n (y_k-x_k)^2} 
+\end{align*}
+Then, the space of $n$-tuple is clearly not a concrete Euclidean space, but a Euclidean space. 
+
+\end{mdframed}
+
+\chapter{Beauty}
+\section{Euler's Formula}
+\begin{mdframed}
+Suppose that we define 
+\begin{align*}
+  \hspace{2cm}\exp(z)&\triangleq \sum_{n=0}^\infty \frac{z^n}{n!}\hspace{1.5cm}(z\inc)\\
+  \hspace{2cm}\sin (z)&\triangleq \sum_{n=0}^\infty \frac{(-1)^n}{(2n+1)!}z^{2n+1}\hspace{1.5cm}(z\inc)\\
+  \hspace{2cm}\cos (z)&\triangleq \sum_{n=0}^\infty \frac{(-1)^n}{(2n)!}z^{2n}\hspace{1.5cm}(z\inc)
+\end{align*}
+Some properties we are familiar with is now easily seen using basic technique we learned in Chapter 3. 
+\begin{enumerate}[label=(\alph*)]
+  \item $\exp(z),\sin(z),\cos(z)$ are well defined on $\C$ by \myref{Cauchy-Hadamard}{Cauchy-Hadamard}.  
+  \item $\begin{cases}
+    \exp(x)\\
+    \sin(x)\\
+    \cos(x)
+  \end{cases}\inr$ provided $x\inr$. 
+  \item $\begin{cases}
+    \exp(0)=1 \\
+    \sin(0)=0\\
+    \cos (0)=1
+  \end{cases}$
+  \item $\exp(x)$ is strictly increasing on $\R\hspace{0.5cm}(\because \abso{y^n-x^n}\leq \abso{y^n}+\abso{x^n})$
+  \item $\exp(x)\nearrow \infty$ as $x\to \infty\hspace{0.5cm}(x\inr)$ 
+  \item $\exp(x)\cdot \exp(y)=\exp(x+y)\hspace{0.5cm}(x\inc)$ by \myref{Merten's Theorem of Cauchy Product}{Merten Cau}
+  \item $\exp (x)\searrow 0$ as $x \to -\infty\hspace{0.5cm}(x\inr)$
+  \item $\begin{cases}
+\frac{d}{dz}\exp(z)=\exp(z)\\
+  \frac{d}{dz}\sin (z)=\cos (z)\\
+  \frac{d}{dz}\cos (z)=- \sin (z)
+  \end{cases}(z\inc)$, using \myref{Term-by-Term Differentiation}{AfaS}. 
+  \item $\exp (x)$ is convex on $\R\hspace{0.5cm}(\because (e^x)''=e^x>0)$  
+  \item $\exp (nz)=\big(\exp (z) \big)^n\hspace{0.5cm}(z\inc,n\inz)$, by induction and \myref{Merten's Theorem of Cauchy Product}{Merten Cau}. 
+\end{enumerate}
+In particular, we have \textbf{Euler's Formula}. 
+\end{mdframed}
+\begin{theorem}
+\textbf{(Euler's Formula)}  
+\begin{align*}
+\hspace{2cm}\exp(iz)=\cos (z) + i \sin (z)\hspace{1.5cm}(z\inc)
+\end{align*}
+\end{theorem}
+\begin{proof}
+Define 
+\begin{align*}
+I_i(n)\triangleq \begin{cases}
+  1& \text{ if $n \equiv 0$ (mod $4$) }\\
+  i& \text{ if $n \equiv 1$ (mod $4$) }\\
+  -1& \text{ if $n \equiv 2$ (mod $4$) }\\
+  -i& \text{ if $n \equiv 3$ (mod $4$) }
+\end{cases}
+\end{align*}
+Compute 
+\begin{align}
+\label{expiz}
+\exp(iz)&=\sum_{n=0} \frac{(iz)^n}{n!}\notag\\ 
+&=\sum_{n=0}^{\infty} \frac{I_i(n)z^n}{n!}\\
+&=\sum_{n=0}^{\infty} \frac{I_i(2n)}{(2n)!}z^{2n}+\frac{I_i(2n+1)}{(2n+1)!}z^{2n+1}\hspace{0.5cm}\big(\because \text{ this is a sub-sequence of \myref{(}{expiz})}\big)\notag\\
+&= \sum_{n=0}^{\infty} \frac{(-1)^{n}}{(2n)!}z^{2n}+ i\cdot \frac{(-1)^n}{(2n+1)!}z^{2n+1} \notag
+\end{align}
+Now, we can conclude 
+\begin{align*}
+\cos (z)+i \sin (z)&= \sum_{n=0}^{\infty}\frac{(-1)^{n}}{(2n)!}z^{2n} + i \cdot \sum_{n=0}^{\infty} \frac{(-1)^{n}}{(2n+1)!}z^{2n+1}\\
+&=\sum_{n=0}^{\infty}\frac{(-1)^{n}}{(2n)!}z^{2n} +  \sum_{n=0}^{\infty} i\cdot  \frac{(-1)^{n}}{(2n+1)!}z^{2n+1} \\
+&=\sum_{n=0}^{\infty}\frac{(-1)^{n}}{(2n)!}z^{2n} +  i\cdot  \frac{(-1)^{n}}{(2n+1)!}z^{2n+1} =\exp (iz)
+\end{align*}
+\end{proof}
+
+
+\section{Alternative Definitions of $e^x$}
+\begin{theorem}
+\textbf{(First Characterization)} for all $x\inr$, the sequence $\set{(1+\frac{x}{n})^n}_{n\inn}$ has limit 
+\begin{align*}
+\lim_{n\to \infty} \Big(1+\frac{x}{n}\Big)^n = \sum_{k=0}^\infty \frac{x^k}{k!}
+\end{align*}
+\end{theorem}
+\begin{proof}
+The proof is trivial if $x=0$. First suppose  $x\inr^+$. Set 
+\begin{align*}
+t_n\triangleq \Big(1+\frac{x}{n}\Big)^n\text{ and }s_n\triangleq \sum_{k=0}^n \frac{x^k}{k!}
+\end{align*}
+We wish to show 
+\begin{align*}
+\vi{\limsup_{n\to\infty} t_n\leq \lim_{n\to \infty}s_n\leq \liminf_{n\to\infty} t_n}
+\end{align*}
+We first prove 
+\begin{align*}
+\blue{\limsup_{n\to\infty} t_n\leq \lim_{n\to \infty}s_n}
+\end{align*}
+Use Binomial Theorem to compute 
+\begin{align*}
+t_n=\Big(1+\frac{x}{n} \Big)^n&= \sum_{k=0}^n \binom{n}{k} \Big(\frac{x}{n} \Big)^k\\
+&=\sum_{k=0}^n \frac{x^k}{k!} \cdot \frac{n(n-1)\cdots (n-k+1)}{n^k} \leq \sum_{k=0}^n \frac{x^k}{k!}=s_n \bdone
+\end{align*}
+We now prove 
+\begin{align*}
+\olive{\lim_{n\to \infty}s_n\leq \liminf_{n\to\infty} t_n}
+\end{align*}
+Fix $\epsilon $. Because $s_n\nearrow $, we know there exists  $m$ such that 
+ \begin{align*}
+s_m> \lim_{n\to \infty}s_n -\epsilon 
+\end{align*}
+Fix such $m$. Observe 
+ \begin{align*}
+\hspace{1.5cm}t_n=\sum _{k=0}^n \binom{n}{k}\Big(\frac{x}{n} \Big)^k\geq \sum_{k=0}^m \frac{x^k}{k!}\cdot \frac{n(n-1)\cdots (n-k+1)}{n^k}\hspace{1.5cm}(n\geq m)
+\end{align*}
+Clearly, there exists $N$ such that 
+\begin{align*}
+  \forall n>N, \abso{\Big( \sum_{k=0}^m \frac{x^k}{k!}\cdot \frac{n(n-1)\cdots (n-k+1)}{n^k}\Big) - s_m }\leq  s_m-(\lim_{n\to \infty}s_n-\epsilon )
+\end{align*}
+Then, we see for all $n>\max \set{N,m}$
+\begin{align*}
+  t_n\geq \sum_{k=0}^m \frac{x^k}{k!}\cdot \frac{n(n-1)\cdots (n-k+1)}{n^k} &\geq s_m - (s_m-\lim_{n\to \infty}s_n -\epsilon )\\
+  &=\lim_{n\to \infty}s_n -\epsilon \odone \vdone
+\end{align*}
+For negative real, we only wish to show 
+\begin{align*}
+\vi{\sum_{n=0}^\infty \frac{(-x)^n}{n!}=\Big(\sum_{n=0}^\infty \frac{x^n}{n!} \Big)^{-1}}\text{ and }\blue{\lim_{n\to \infty}\Big(1-\frac{x}{n} \Big)^{n}=\Bigg(\lim_{n\to\infty    }\Big(1+\frac{x}{n} \Big)^{n} \Bigg)^{-1}}
+\end{align*}
+Because the convergence is absolute, we can use Merten's Theorem for Cauchy product (\myref{Theorem}{Merten Cau})to compute 
+\begin{align*}
+\Big( \sum_{n=0}^{\infty} \frac{(-x)^n}{n!}\Big)\cdot \Big( \sum_{n=0}^\infty \frac{x^n}{n!} \Big)&= \sum_{n=0}^\infty \Big(\sum_{k=0}^n \binom{n}{k}(-1)^{n-k} \Big) \frac{x^n}{n!}\\
+&=\sum_{n=0}^\infty (1-1)^{n} \frac{x^n}{n!}=1 \vdone
+\end{align*}
+We first prove 
+\begin{align*}
+\olive{\lim_{n\to \infty}\Big(1-\frac{x^2}{n^2} \Big)^n=1}
+\end{align*}
+Computing term by term, it is clear that 
+\begin{align*}
+\limsup_{n\to\infty} \Big(1-\frac{x^2}{n^2} \Big)^n \leq 1
+\end{align*}
+Using Bernoulli's Inequality (\myref{Theorem}{Bernoulli's Inequality}), we see that for large enough $n$, we have 
+\begin{align*}
+  \Big(1-\frac{x^2}{n^2} \Big)^n\geq 1-\frac{x^2}{n} 
+\end{align*}
+This then implies 
+\begin{align*}
+\liminf_{n\to\infty} \Big(1-\frac{x^2}{n^2} \Big)^n \geq 1\odone
+\end{align*}
+Compute
+\begin{align*}
+\lim_{n\to \infty}\Big(1-\frac{x}{n} \Big)^{n} &= \lim_{n\to \infty}\Bigg(\frac{1-\frac{x^2}{n^2}}{1+\frac{x}{n}}\Bigg)^n \\
+&=\frac{\lim_{n \to \infty} (1-\frac{x^2}{n^2})^n}{\lim_{n\to \infty}(1+\frac{x}{n})^n}=\frac{1}{\lim_{n\to \infty}(1+\frac{x}{n})^n}\bdone
+\end{align*}
 
 
 
+
+
+\end{proof}
+\begin{mdframed}
+\begin{align*}
+\ln (x)\triangleq \int_1^x \frac{1}{t}dt
+\end{align*}
+By FTC (\myref{Theorem}{FTC1}), it is easy to see that 
+ \begin{align*}
+\hspace{1.5cm}\frac{d}{dx}\ln (x)=\frac{1}{x}\hspace{1.5cm}(x\inr^+)
+\end{align*}
+To see 
+\begin{align*}
+\ln (xy)=\ln (x)+ \ln (y)
+\end{align*}
+Fix $y\inr^+$ and set 
+\begin{align*}
+f(x)\triangleq \ln (x)\text{ and }g(x)\triangleq \ln(xy)
+\end{align*}
+Conclude $f'(x)=g'(x)$, and use FTC (\myref{Theorem}{FTC2}) to conclude $f-g$ is some fixed constant $k$. Now, see that 
+\begin{align*}
+g(1)=f(1)+k \implies k=\ln(y)
+\end{align*}
+Then, we have 
+\begin{align*}
+\ln(xy)=g(x)=f(x)+k=\ln (x)+ \ln (y)
+\end{align*}
+Using induction, it is now easy to see 
+\begin{align*}
+  \hspace{3cm}\ln (x^n)=n \ln (x)\hspace{2.5cm}(n\inz_0^+)
+\end{align*}
+\end{mdframed}
+\begin{theorem}
+\textbf{(Second Characterization)}
+\end{theorem}
+\section{Equivalent Definition of Trigonometric Functions}
 
 
 
